force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Last_Name__c</fullName>
    <description>Last Name from Care Plan&apos;s Case Manager&apos;s User Account --&gt; CASE_MANAGER_LAST_NAME,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>