force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Phone_Number__c</fullName>
    <description>Phone Number from Care Plan&apos;s Case Manager&apos;s User Account --&gt; CASE_MANAGER_PHONE_NUMBER,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Phone Number</label>
    <type>Phone</type>
</CustomField>