force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Region__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Region__c</fullName>
    <description>Region from Care Plan&apos;s Case Manager&apos;s User Account --&gt; CASE_MANAGER_REGION,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>