force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Status__c</fullName>
    <description>AC Status from Care Plan --&gt; STATUS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>