force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Status_Change_Date__c</fullName>
    <description>Last CM Status Change Date from Care Plan --&gt; STATUS_DATE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Status Change Date</label>
    <type>Date</type>
</CustomField>