force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Sub_Status__c</fullName>
    <description>AC Sub-Status from Care Plan --&gt; SUBSTATUS,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Sub-Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>