force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Territory__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Territory__c</fullName>
    <description>Territory from Care Plan&apos;s Case Manager&apos;s User Account --&gt; CASE_MANAGER_TERRITORY,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>