force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Completed_Date__c</fullName>
    <description>COMPLETED_DATE (Ashfield Response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>