force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Date_of_Rx__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Rx__c</fullName>
    <description>Date field to store Date of Rx.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Rx</label>
    <type>Date</type>
</CustomField>