force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Processed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Processed</label>
    <type>DateTime</type>
</CustomField>