force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Date_Start_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Start_Form_Received__c</fullName>
    <description>Date Start Form Received from Care Plan --&gt; DATE_START_FORM_RECEIVED,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Start Form Received</label>
    <type>DateTime</type>
</CustomField>