force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Submitted__c</fullName>
    <description>Date/Time a fulfillment request was submitted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Submitted</label>
    <type>DateTime</type>
</CustomField>