force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Date_Written__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Written__c</fullName>
    <description>Formula to stamp the date written value from the patient&apos;s prescription record selected on the fulfillment request.</description>
    <formula>PJN_Prescription__r.HealthCloudGA__DateWritten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Written</label>
    <type>Date</type>
</CustomField>