force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Dose__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose__c</fullName>
    <description>Number field used to stamp a patient&apos;s primary prescription dose (related to the primary prescription stored on their care plan record).</description>
    <label>Dose</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>