force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Dose_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PJN_Dose_Instructions__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary prescription dose instructions (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dose Instructions</label>
    <length>25</length>
    <type>Text</type>
</CustomField>