force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_ID__c</fullName>
    <description>External ID on FR, Unique, case insensitive.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>