force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_First_Dose_Administered_Using__c.field-meta.xml
<CustomField>
    <fullName>PJN_First_Dose_Administered_Using__c</fullName>
    <description>FIRST_DOSE_ADMINISTERED_USING (Ashfield response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Dose Administered Using</label>
    <length>100</length>
    <type>Text</type>
</CustomField>