force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_HIPPA_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_HIPPA_Consent_Date__c</fullName>
    <description>- Consent Date from Patient&apos;s HIPAA Consent --&gt; HIPAA_CONSENT_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPAA Consent Date</label>
    <type>Date</type>
</CustomField>