force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_HIPPA_Consent_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_HIPPA_Consent_Expiration_Date__c</fullName>
    <description>- Expiration Date from Patient&apos;s HIPAA Consent --&gt; consent_expiration_date,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPAA Consent Expiration Date</label>
    <type>Date</type>
</CustomField>