force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_HIPPA_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_HIPPA_Consent_Status__c</fullName>
    <description>- Status from Patient&apos;s HIPAA Consent --&gt; HIPAA_CONSENT_STATUS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPAA Consent Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>