force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Interaction_Type__c</fullName>
    <description>INTERACTION_TYPE (Ashfield response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>