force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Location_Type__c</fullName>
    <description>LOCATION_TYPE (Ashfield Response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>