force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_NDC__c.field-meta.xml
<CustomField>
    <fullName>PJN_NDC__c</fullName>
    <description>NDC from Prescription&apos;s Product --&gt; NDC,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NDC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>