force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Number_of_Refills__c.field-meta.xml
<CustomField>
    <fullName>PJN_Number_of_Refills__c</fullName>
    <description>Number field used to stamp a patient&apos;s primary prescription number of refills (related to the primary prescription stored on their care plan record).</description>
    <label>Number of Refills</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>