force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the patient account related to the requested fulfillment.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>PJN_Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>