force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a patient&apos;s address.</description>
    <label>Patient Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>