force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Birthdate__c</fullName>
    <description>Date field used to stamp a patient&apos;s birthdate (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>