force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_City__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary address city (stored on their address contact information record when that record is set as primary).</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>