force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Country__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Country__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary address country (stored on their address contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>