force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Diagnosis_Date__c</fullName>
    <description>mapping to  --&gt; PATIENT_DIAGNOSIS_DATE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Diagnosis Date</label>
    <type>Date</type>
</CustomField>