force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_DOB__c</fullName>
    <description>Birthdate from Patient Account --&gt; PATIENT_DOB.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>