force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Email__c</fullName>
    <description>Email field used to stamp a patient&apos;s primary email address (stored on their email contact information record when that record is set as primary).</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Email</label>
    <type>Email</type>
</CustomField>