force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Email_Address__c</fullName>
    <description>Email field used to stamp a patient&apos;s primary email address (stored on their email contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Email Address</label>
    <type>Email</type>
</CustomField>