force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Email_Consent__c</fullName>
    <description>Status from Patient&apos;s Email Consent --&gt; PATIENT_CONSENT_TO_EMAIL,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Email Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>