force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_First_Name__c</fullName>
    <description>Text field used to stamp the first name of the patient related to the care plan.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>