force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Gender__c</fullName>
    <description>Text field used to stamp the gender of the patient related to the care plan.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Gender</label>
    <length>25</length>
    <type>Text</type>
</CustomField>