force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Home_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Home_Phone_Number__c</fullName>
    <description>- Phone Number from Patient&apos;s Home Phone Contact Information --&gt; PATIENT_PHONE_NUMBER_HOME.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Home Phone Number</label>
    <type>Phone</type>
</CustomField>