force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Middle_Name__c</fullName>
    <description>- Middle Name from Patient Account --&gt; PATIENT_MIDDLE_INITIAL.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>