force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Mobile_Phone_Number__c</fullName>
    <description>Phone Number from Patient&apos;s Mobile Phone Contact Information --&gt; PATIENT_PHONE_NUMBER_MOBILE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>