force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Phone__c</fullName>
    <description>Phone field used to stamp a patient&apos;s primary phone number (stored on their phone contact information record when that record is set as primary).</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Phone</label>
    <type>Phone</type>
</CustomField>