force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Preferred_Language__c</fullName>
    <description>- Preferred Language from Patient Account --&gt; PATIENT_LANGUAGE_PREFERENCE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Preferred Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>