force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Prescription_File_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Prescription_File_Name__c</fullName>
    <description>File Name from Patient&apos;s Enrollment Form --&gt; PATIENT_PRESCRIPTION_FILENAME,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Prescription File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>