force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Prescription_File_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Prescription_File_Sent_Date__c</fullName>
    <description>Sent Date from Patient&apos;s Enrollment Form --&gt; PATIENT_PRESCRIPTION_FILE_SENT_DATE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Prescription File Sent Date</label>
    <type>Date</type>
</CustomField>