force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Primary_Language__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary language (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Primary Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>