force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Primary_Phone_Number__c</fullName>
    <description>Phone field used to store Patient Primary Phone Number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Primary Phone Number</label>
    <type>Phone</type>
</CustomField>