force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Product_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Product_Shipment_Date__c</fullName>
    <description>Date field to map PATIENT_PRODUCT_SHIPMENT_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Product Shipment Date</label>
    <type>Date</type>
</CustomField>