force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Product_Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Product_Shipping_Carrier__c</fullName>
    <description>Text(20) to map PATIENT_PRODUCT_SHIPPING_CARRIER.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Product Shipping Carrier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>