force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Product_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Product_Tracking_Number__c</fullName>
    <description>Text(20) to map PATIENT_PRODUCT_TRACKING_NUMBER.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Product Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>