force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Program_Consent__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Program_Consent__c</fullName>
    <description>- Status from Patient&apos;s Program Consent --&gt; PATIENT_SERVICES_OPT_IN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Program Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>