force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Program_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Program_Consent_Date__c</fullName>
    <description>- Consent Date from Patient&apos;s Program Consent --&gt; PATIENT_SERVICES_OPT_IN_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Program Consent Date</label>
    <type>Date</type>
</CustomField>