force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Program_Consent_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Program_Consent_Opt_Out_Date__c</fullName>
    <description>- Opt-Out Date from Patient&apos;s Program Consent --&gt; PATIENT_SERVICES_OPT_OUT_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Program Consent Opt Out Date</label>
    <type>Date</type>
</CustomField>