force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_State__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary address state (stored on their address contact information record when that record is set as primary).</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>