force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Status__c</fullName>
    <description>Field to store Patient Status.</description>
    <label>Patient Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>