force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Sub_Status__c</fullName>
    <description>Field to store Patient Sub-Status.</description>
    <label>Patient Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>