force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Type__c</fullName>
    <description>Picklist, Patient type from Account. Field is used in PEP to SP - Data Mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>