force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_YOB__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_YOB__c</fullName>
    <description>- Birthdate from Patient Account --&gt; PATIENT_YOB.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient YOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>