force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Patient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Zip_Code__c</fullName>
    <description>- Zip Code from Patient&apos;s Primary Address --&gt; PATIENT_ZIP_CODE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>