force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary prescription pharmacy (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>