force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Pharmacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_ID__c</fullName>
    <description>Text (100) field to store Pharmacy ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>