force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Pharmacy_Selection_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_Selection_Reason__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary prescription pharmacy selection reason (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Selection Reason</label>
    <length>25</length>
    <type>Text</type>
</CustomField>